[metadata]
name = pipe-cheops
author = Alexis Brandeker
author_email = alexis@astro.su.se
license = GNU GPL v3+
license_file = licenses/LICENSE.rst
url = https://github.com/alphapsa/PIPE
description = PIPE is a package for extracting PSF photometry from CHEOPS data.
long_description = file: README.rst

[options]
zip_safe = False
packages = find:
python_requires = >=3.5
setup_requires = setuptools_scm
install_requires =
    numpy
    scipy
    astropy
    scikit-image

[options.extras_require]
all =
    numpy
    scipy
    astropy
    scikit-image
test =
    pytest
    pytest-doctestplus
    pytest-cov
    pandas
docs =
    sphinx
    sphinx-automodapi
    sphinx-astropy

[options.package_data]
pipe =
    data/*
    config/conf.json

[tool:pytest]
testpaths = "pipe" "docs"
doctest_plus = enabled
text_file_format = rst
addopts = --doctest-rst

[coverage:run]
omit =
  pipe/__init*
  pipe/conftest.py
  pipe/*setup_package*
  pipe/tests/*
  pipe/*/tests/*
  pipe/extern/*
  pipe/version*
  */pipe/__init*
  */pipe/conftest.py
  */pipe/*setup_package*
  */pipe/tests/*
  */pipe/*/tests/*
  */pipe/extern/*
  */pipe/version*

[coverage:report]
exclude_lines =
  # Have to re-enable the standard pragma
  pragma: no cover
  # Don't complain about packages we have installed
  except ImportError
  # Don't complain if tests don't hit assertions
  raise AssertionError
  raise NotImplementedError
  # Don't complain about script hooks
  def main\(.*\):
  # Ignore branches that don't pertain to this version of Python
  pragma: py{ignore_python_version}
  # Don't complain about IPython completion helper
  def _ipython_key_completions_
